# multi_agent_llm

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py  test_environment.py
.devcontainer/: devcontainer.json
deploy/: DEPLOY.md
docs/: README.md  conf.py  index.rst
src/: financial_agent.py  multi_agent.py  planning_agent.py  simple_agent.py  tool_agent.py
src/data/: make_dataset.py
src/models/: train_model.py
src/service/: MyLogger.py  Tools.py
src/visualization/: show_analysis.py
