[tool.poetry]
name = "multi-agents"
version = "0.1.0"
description = "Multi Agents for After Life"
authors = ["Jose Lopez <33095863+aifriend@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
click = "^8.1.7"
coverage = "^7.5.0"
flake8 = "^7.0.0"
poetry = "^1.8.2"
tox = "^4.15.0"
crewai = "^0.28.8"
crewai-tools = "^0.1.6"
langchain_community = "^0.0.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
